k8s_examples_bak/clustered-pingfederate/test/pingdataconsole_ingress_patch.yaml
- op: replace
  path: /spec/tls/0/hosts/0
  value: dataconsole.${TENANT_DOMAIN}
- op: replace
  path: /spec/rules/0/host
  value: dataconsole.${TENANT_DOMAIN}
