k8s_examples_bak/clustered-pingfederate/test/pingfederateconsole_ingress_patch.yaml
- op: replace
  path: /spec/tls/0/hosts/0
  value: federateconsole.${TENANT_DOMAIN}
